feat: :sparkles: add Supabase setup
Configured Supabase server, middleware and auth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
   "css.lint.unknownAtRules": "ignore",
-  "cSpell.words": ["lucide", "nextjs", "Shadcn", "tailwindcss", "toploader"]
+  "cSpell.words": [
+    "lucide",
+    "nextjs",
+    "Shadcn",
+    "supabase",
+    "tailwindcss",
+    "toploader"
+  ]
 }
